--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>{{user.name}}'s flask</title>
-		<link rel="icon" href="{{ url_for('static',filename='favicon.ico') }}">
-		<link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}" type="text/css">
-	</head>
-	<body>
-		<h>
-			<br />
-			<img alt="sunergao-mini" class="sunergao-mini" src="{{ url_for('static',filename='images/sunergao-mini.png') }}">
-			{{user.name}}'s flask
-		</h>
-		<p>{{ movies|length }} Titles</p>
-		<ul class="movie-list">
-			{% for movie in movies %}
-			<li>{{movie.title}} - {{movie.year}}</li>
-			{% endfor %}
-		</ul>
-		<img alt="sunergao" class="sunergao" src="{{ url_for('static',filename='images/sunergao.png') }}">
-		<footer>
-			<small>&copy; 2021 <a href="http://localhost:5000">flask</a></small>
-		</footer>
-	</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<p>{{ movies|length }} Titles</p>
+<ul class="movie-list">
+	{% for movie in movies %}
+	<span class="float-right">
+	    <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+	</span>
+	<li>{{movie.title}} - {{movie.year}}</li>
+	{% endfor %}
+</ul>
+<img alt="sunergao" class="sunergao" src="{{ url_for('static',filename='images/sunergao.png') }}">
+{% endblock %}
