--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,12 @@
 <p>{{ movies|length }} Titles</p>
 <ul class="movie-list">
 	{% for movie in movies %}
-	<span class="float-right">
-	    <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
-	</span>
-	<li>{{movie.title}} - {{movie.year}}</li>
+	<li>
+		{{movie.title}} - {{movie.year}}
+		<span class="float-right">
+			<a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank" title="Find this movie on IMDb">IMDb</a>
+		</span>
+	</li>
 	{% endfor %}
 </ul>
 <img alt="sunergao" class="sunergao" src="{{ url_for('static',filename='images/sunergao.png') }}">
